# t27

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .lefthook.yml  .mcp.json  .zenodo.json  AGENTS.md  ANSWER_TO_CRITIC_THEOREM3_MECHANISM.md  BPB_STATUS.md  BRAND_KIT.md  BUILD_STATUS.md  CANON.md  CHANGELOG.md  CHANGELOG_EN.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FRONTEND_REBUILD_TRIGGER.txt  FROZEN.md  G2_ALPHA_S_PHI_FRAMEWORK_V0.9.aux  GITHUB_ISSUE_THEOREM3.md  ISSUE_THEOREM3_GENERATIVE_MECHANISM.md  LICENSE  NOTICE  NOW.md  NOW.md~Stashed changes  NOW.md~Stashed changes_0  NOW.md~Stashed changes_1  NOW_FULL.md  OWNERS.md  QUICK_START.md  QUICK_START_EN.md  README-ZENODO.md  README.md  RUNPOD_GRANT_STATUS.md  (+25 more)
.claude/: gitbutler-hooks.json  mcp.json  settings.json
.githooks/: post-merge  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.jtag_tools/: PROGRESS_REPORT.md
.swarm/: model-router-state.json
.trinity/: ARCHITECTURE.md  WORKLOG.md  dashboard.md  dissertation_program.tri  igla_stack_502.md  leaderboard.db  phd_status_audit_updated.md  repo_policy.json  roads.md  strand_i_workflow.tri  wrapup-session-agent-t-antigravity.md
architecture/: ADR-001-de-zigfication.md  ADR-003-tdd-inside-spec.md  ADR-004-language-policy.md  ADR-005-de-zig-strict.md  ADR-006-constitution-soul-ring-agent-competition.md  CANON_DE_ZIGFICATION.md  OWNERS.md  graph.tri  graph_v2.json
backend/: docker-compose.yml
backend/agent-runner/: Cargo.toml  Dockerfile  agent-runner.py
backend/agent-runner/src/: agent.rs  api.rs  config.rs  logger.rs  main.rs
backend/agent-runner/src/steps/: web_server.rs
backend/trinity-core/: Cargo.toml
backend/trinity-core/src/: broadcaster.rs  handlers.rs  main.rs  models.rs  store.rs
bindings/javascript/: Cargo.toml  golden-float.d.ts  package.json
bindings/javascript/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/golden_float/: __init__.py  numpy_dtype.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_numpy.py
bootstrap/: Cargo.toml  Dockerfile  OWNERS.md  build.rs  libchimera_engine.rlib  main.zig  parse_t27.py  t27c.py  test  test_r01_const.t27
bootstrap/bootstrap/specs/physics/: formula_registry.t27
bootstrap/research/formula-matrix/: DISCOVERY_V51_FINAL_20260410_020839.md  DISCOVERY_V51_FINAL_20260410_021518.md  DISCOVERY_V51_FINAL_20260410_081054.md  DISCOVERY_V51_FINAL_20260410_081518.md  DISCOVERY_V51_FINAL_20260410_084041.md  DISCOVERY_V51_FINAL_20260410_084205.md  DISCOVERY_V51_FINAL_20260410_084206.md  DISCOVERY_V51_FINAL_20260410_084208.md  DISCOVERY_V51_FINAL_20260410_084209.md  DISCOVERY_V51_FINAL_20260410_084210.md  DISCOVERY_V51_FINAL_20260410_084212.md  DISCOVERY_V51_FINAL_20260410_084213.md  DISCOVERY_V51_FINAL_20260410_084215.md  DISCOVERY_V51_FINAL_20260410_084216.md  DISCOVERY_V51_FINAL_20260410_084218.md  DISCOVERY_V51_FINAL_20260410_110506.md
bootstrap/src/: bench.rs  bridge.rs  chimera_engine.rs  clara_demo.rs  cli.rs  codegen.rs  codegen_python.rs  compiler.rs  compiler.rs.backup  enrichment.rs  experience.rs  formula_eval.rs  gf32_demo.rs  jwt.rs  kleene_k3.rs  lib.rs  main.rs  math_bayes.rs  math_cli.rs  math_compare.rs  math_compare_gamma.rs  math_compare_gamma_nodeps.rs  math_pslq.rs  notebook.rs  opcodes.rs  parser.rs  phi_arith.rs  pipeline.rs  proxy.rs  railway.rs  runtime_minimal.rs  runtime_minimal_test.rs  sensitivity.rs  suite.rs  test_runner.rs  tooling.rs  trib_executor.rs  vm.rs
bootstrap/src/cli/: mod.rs  repl.rs
bootstrap/src/compiler/: RING-018-PHASE1-COMPLETE.md  mod.rs  render.rs
bootstrap/src/compiler/ast/: decl.rs  expr.rs  mod.rs  pattern.rs  types.rs
bootstrap/src/compiler/codegen/: mod.rs  model.rs  tri_ir.rs  trib.rs
bootstrap/src/compiler/codegen/emit/: trib.rs
bootstrap/src/compiler/codegen/lower/: mod.rs
bootstrap/src/compiler/codegen/model/: trie.rs
bootstrap/src/compiler/diagnostics/: error.rs  mod.rs  render.rs  span.rs
bootstrap/src/compiler/lower/: mod.rs  tri_ir.rs  trib.rs
bootstrap/src/compiler/parser/: decl_parser.rs  expr.rs  expr_parser.rs  mod.rs  type_parser.rs
bootstrap/src/compiler/semantic/: mod.rs  name_resolution.rs  promotion.rs  typecheck.rs
bootstrap/src/compiler/t27c/: mod.rs
bootstrap/src/compiler/typecheck/: numeric.rs
bootstrap/src/compiler_memory/: mod.rs  store.rs
bootstrap/src/enrichment/: audio_overview.rs  mod.rs  youtube_transcript.rs  youtube_transcript_gen.rs
bootstrap/src/memory/: ace_step_wrapper.py  mod.rs
bootstrap/src/neural/: attention.rs  hslm.rs  mod.rs
bootstrap/src/runtime/: mod.rs
bootstrap/src/ternary/: mod.rs
bootstrap/src/vm/: executor.rs  memory.rs  mod.rs  opcodes.rs
bootstrap/stage0/: FROZEN_HASH  OWNERS.md
bootstrap/tests/: test_r_l01_const.rs  test_simple.rs
cli/tri/: Cargo.toml  RING-017-COMPLETE.md
cli/tri-mcp/: Cargo.toml
cli/tri-mcp/src/: main.rs
cli/tri/src/: igla.rs  main.rs  railway.rs
cli/tri/src/commands/: bench.rs  experimental.rs  mod.rs  parse.rs  pipeline.rs
contrib/backend/agent-runner/: Cargo.toml
contrib/backend/agent-runner/src/: api.rs  main.rs  tools.rs
contrib/backend/agent-runner/src/steps/: git_clone.rs  github_auth.rs  healthcheck.rs  mod.rs  opencode_config.rs
crates/trios-agents/: Cargo.toml
crates/trios-cli/: Cargo.toml
crates/trios-cli/src/: gh.rs  lib.rs  lock.rs  main.rs  metrics.rs  table.rs
crates/trios-cli/src/cmd/: commit.rs  gates.rs  issue.rs  mod.rs  report.rs  roster.rs  run.rs  submit.rs  sweep.rs
crates/trios-crypto/: Cargo.toml  README.md  build.rs
crates/trios-crypto/src/: ffi.rs  lib.rs
crates/trios-crypto/tests/: e2e.rs  integration.rs
crates/trios-ext/: Cargo.toml  build.rs
crates/trios-ext/extension/styles/: brand.css
crates/trios-ext/src/: lib.rs
crates/trios-golden-float/: Cargo.toml  build.rs
crates/trios-golden-float/src/: ffi.rs  lib.rs  router.rs
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
general/: Cargo.toml
general/src/: main.rs
(+3176 files in other folders)
