[workspace]
members = [
    "crates/trios-core",
    "crates/trios-git",
    "crates/trios-gb",
    "crates/trios-server",
    "crates/trios-kg",
    "crates/trios-agents",
    "crates/trios-training",
    "crates/trios-hdc",
    "crates/trios-golden-float",
    "crates/trios-physics",
    "crates/trios-sacred",
    "crates/trios-crypto",
    "crates/trios-zig-agents",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tempfile = "3"
