[workspace]
members = [
    # Core (Φ0)
    "crates/trios-core",
    "crates/precision-router",
    # GF16 (Φ2)
    "crates/trios-golden-float",
    # Ternary (Φ3)
    "crates/trios-ternary",
    # Git & MCP infrastructure
    "crates/trios-git",
    "crates/trios-gb",
    "crates/trios-server",
    "crates/trios-kg",
    # Agents & Training
    "crates/trios-agents",
    "crates/trios-training",
    # Other modules (legacy - to be reviewed)
    "crates/trios-hdc",
    "crates/trios-physics",
    "crates/trios-sacred",
    "crates/trios-crypto",
    "crates/trios-zig-agents",
    "crates/zig-agents",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
git2 = "0.19"
async-trait = "0.1"
tempfile = "3"
thiserror = "1"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
