[workspace]
members = [
    # Core (Φ0)
    "crates/trios-core",
    "crates/trios-vsa",
    "crates/trios-hybrid",
    "crates/trios-vm",
    "crates/trios-sdk",
    # Precision Routing (Φ1)
    "crates/precision-router",
    # GF16 (Φ2)
    "crates/trios-golden-float",
    # Ternary (Φ3)
    "crates/trios-ternary",
    # Sacred Geometry (Φ5)
    "crates/trios-sacred",
    # Crypto & Physics
    "crates/trios-crypto",
    "crates/trios-physics",
    "crates/trios-hdc",
    # Git & MCP infrastructure
    "crates/trios-git",
    "crates/trios-gb",
    "crates/trios-server",
    "crates/trios-kg",
    # Agents & Training
    "crates/trios-agents",
    "crates/trios-training",
    "crates/trios-training-ffi",
    "crates/trios-llm",
    "crates/trios-zig-agents",
    # Brain
    "crates/trinity-brain",
    # Zig engines
    "crates/zig-agents",
    "crates/zig-knowledge-graph",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
git2 = "0.19"
async-trait = "0.1"
tempfile = "3"
thiserror = "1"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
