[package]
name = "t27c"
version = "0.1.0"
edition = "2021"
description = "T27 Bootstrap Compiler for Trinity S³AI Framework"
license = "MIT"

[features]
server = ["axum", "tokio", "serde"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
