[package]
name = "t27c"
version = "0.1.0"
edition = "2021"
description = "T27 Bootstrap Compiler for Trinity S³AI Framework"
license = "MIT"

[features]
server = ["axum", "tokio"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
colored = "2"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
futures-util = "0.3"
