[package]
name = "golden-float-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI layer for GoldenFloat cross-language bindings"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]

[build-dependencies]
cc = "1.1"
cbindgen = "0.27"

[package.metadata.docs.rs]
targets = []
