[package]
name = "trinity-general"
version = "0.1.0"
edition = "2021"
description = "Trinity General — Agent-to-Agent orchestration bridge for OpenCode"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
