[package]
name = "golden-float-js"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for GoldenFloat via wasm-bindgen"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
opt-level = "z"
lto = true
