[package]
name = "golden-float-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for GoldenFloat via PyO3"
license = "MIT"

[lib]
name = "golden_float"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3"] }

[build-dependencies]
golden-float-ffi = { path = "../../ffi" }
