[package]
name = "tri-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tri-mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
