[package]
name = "tri"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tri"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
