[package]
name = "tri"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]

[[bin]]
name = "tri"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
