[package]
name = "trios-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP client and MCP proxy for zig-agents"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }

[dev-dependencies]
axum = "0.7"
