[package]
name = "tri"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tri"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.19"
rusqlite = "0.30"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
