[package]
name = "trios-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust bindings for zig-crypto-mining (BTC mining, DePIN primitives)"

[dependencies]
libc = "0.2"

[features]
default = []
ffi = []

[build-dependencies]
cc = "1.0"
