[package]
name = "trios-ext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Trios Chrome Extension (Rust + Wasm-bindgen)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "NodeList", "DomTokenList", "WebSocket", "MessageEvent",
    "CloseEvent", "KeyboardEvent", "console", "Event", "EventTarget",
    "BinaryType",
] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 4
